[tool.poetry]
name = "paper-organizer"
version = "0.1.0"
description = ""
authors = ["Philpax <me@philpax.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
arxiv = "^2.1.3"
usearch = "^2.12.0"
sentence-transformers = "^3.0.1"
numpy = "<2.0.0"
transformers = "^4.42.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
